fixes browser dropdown overlap bug in IE11 (#4380)
* fixes browser dropdown overlap bug in IE11

* added inline comment and changed width from 194px to 189px

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -536,8 +536,10 @@
 @media only screen and (min-width: 25em) {
   .header-bar {
     .logo-component {
+      // The width and height attributes of logo-icon should be equal to dimensions of /static/images/openlibrary-logo-tighter.svg
       .logo-icon {
         height: 47px;
+        width: 189px;
       }
     }
 
